tests/compile_fail/mismatch_type.stderr
error: defined def_type `Sint64` does not match this Rust type
 --> $DIR/mismatch_type.rs:6:8
  |
6 |     s: u32,
  |        ^^^
